--- a/public/src/css/index.css
+++ b/public/src/css/index.css
@@ -4,8 +4,9 @@
   position: relative;
   border-radius: 50%;
   background-color: var(--color-white);
-  display: none;
+  display: none
 }
+
 .background {
   width: 100%;
   height: 100%;
@@ -15,48 +16,54 @@
   right: 0;
   bottom: 0;
   left: 0;
-  box-shadow: 0 2px 14px rgba(0, 0, 0, 0.25);
+  box-shadow: 0 2px 14px #00000040;
   border-radius: 50%;
-  background-color: var(--color-tan);
+  background-color: var(--color-tan)
 }
+
 .hour-hand-icon {
   width: 4px;
   height: 7px;
   position: relative;
   object-fit: contain;
-  z-index: 1;
+  z-index: 1
 }
+
 .minute-container {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   justify-content: flex-start;
-  padding: 8.7px 0 0;
+  padding: 8.7px 0 0
 }
+
 .b {
   flex: 1;
   position: relative;
   line-height: 100%;
-  z-index: 1;
+  z-index: 1
 }
+
 .inner-hour-container {
   flex: 1;
   display: flex;
   flex-direction: row;
   align-items: flex-start;
   justify-content: flex-start;
-  gap: 5.7px;
+  gap: 5.7px
 }
+
 .second-hand-icon {
   height: 6.9px;
   width: 8.1px;
   position: absolute;
   margin: 0 !important;
   right: 16.9px;
-  bottom: 0.1px;
+  bottom: .1px;
   object-fit: contain;
-  z-index: 1;
+  z-index: 1
 }
+
 .hour-container {
   align-self: stretch;
   display: flex;
@@ -64,8 +71,9 @@
   align-items: flex-start;
   justify-content: flex-end;
   padding: 0 var(--padding-9xl) 0 var(--padding-lgi);
-  position: relative;
+  position: relative
 }
+
 .timestamp-icons {
   width: 6.9px;
   height: 8.1px;
@@ -74,8 +82,9 @@
   top: 21.3px;
   left: 11.4px;
   object-fit: contain;
-  z-index: 1;
+  z-index: 1
 }
+
 .minute-hand-icon,
 .timestamp-icons1 {
   width: 7px;
@@ -84,128 +93,138 @@
   margin: 0 !important;
   bottom: 25px;
   left: 11px;
-  z-index: 1;
+  z-index: 1
 }
+
 .minute-hand-icon {
   width: 8.1px;
   height: 6.9px;
   bottom: 11.1px;
   left: 22px;
-  object-fit: contain;
+  object-fit: contain
 }
-.time-separators {
-  position: relative;
-  line-height: 100%;
-  z-index: 1;
-}
+
 .heures-icon,
 .secondes-icon {
   position: absolute;
-  margin: 0 !important;
+  margin: 0 !important
 }
+
 .secondes-icon {
   height: 34.6px;
   width: 23.8px;
   bottom: -17.3px;
   left: 5.1px;
   object-fit: contain;
-  z-index: 1;
+  z-index: 1
 }
+
 .heures-icon {
   height: 46px;
   width: 2px;
   right: 15px;
   bottom: -23px;
-  z-index: 2;
+  z-index: 2
 }
+
 .minutes-icon {
   width: 34px;
   height: 0;
   position: relative;
-  z-index: 3;
+  z-index: 3
 }
+
 .hours-minutes-container,
 .minutes-wrapper {
   display: flex;
   align-items: flex-start;
-  justify-content: flex-start;
+  justify-content: flex-start
 }
+
 .minutes-wrapper {
   flex-direction: column;
   visibility: hidden;
-  padding: 8.5px 0 0;
+  padding: 8.5px 0 0
 }
+
 .hours-minutes-container {
   flex-direction: row;
-  position: relative;
+  position: relative
 }
-.time-separators1 {
-  position: relative;
-  line-height: 100%;
-  z-index: 1;
-}
+
 .time-separators-parent {
   display: flex;
   flex-direction: row;
   align-items: flex-start;
   justify-content: flex-start;
-  gap: 9px;
+  gap: 9px
 }
+
 .timestamp-icons2,
 .timestamp-icons3 {
   position: absolute;
   margin: 0 !important;
-  z-index: 1;
+  z-index: 1
 }
+
 .timestamp-icons2 {
   width: 6.9px;
   height: 8.1px;
   right: 11.4px;
   bottom: 22.4px;
-  object-fit: contain;
+  object-fit: contain
 }
+
 .timestamp-icons3 {
   width: 7px;
   height: 4px;
   top: 24px;
-  right: 11px;
+  right: 11px
 }
+
 .b1,
 .date-icon {
   position: relative;
-  z-index: 1;
+  z-index: 1
 }
+
 .b1 {
   flex: 1;
-  line-height: 100%;
+  line-height: 100%
 }
+
 .date-icon {
   width: 4px;
   height: 7px;
-  object-fit: contain;
+  object-fit: contain
 }
+
 .date-icon-container {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   justify-content: flex-start;
-  padding: 3.1px 0 0;
+  padding: 3.1px 0 0
 }
+
 .date-container,
 .parent {
   display: flex;
   flex-direction: row;
-  align-items: flex-start;
+  align-items: flex-start
 }
+
 .parent {
   flex: 1;
   justify-content: flex-start;
-  gap: 8.7px;
+  gap: 8.7px
 }
+
 .date-container {
   justify-content: flex-end;
-  padding: 0 var(--padding-lgi);
+  padding: 0 var(--padding-lgi)
 }
+
 .timestamp-container {
   display: flex;
   flex-direction: column;
@@ -213,12 +232,14 @@
   justify-content: flex-start;
   padding: var(--padding-11xs) var(--padding-8xs) var(--padding-8xs);
   position: relative;
-  gap: 15px;
+  gap: 15px
 }
+
 .date-p {
-  width:100%;
-  margin: 0;
+  width: 100%;
+  margin: 0
 }
+
 .date {
   height: 74px;
   width: 139px;
@@ -230,8 +251,9 @@
   color: var(--color-dimgray);
   display: flex;
   align-items: center;
-  flex-shrink: 0;
+  flex-shrink: 0
 }
+
 .date-and-time {
   flex: 1;
   border-radius: var(--br-3xs);
@@ -243,20 +265,23 @@
   padding: var(--padding-2xl) var(--padding-lgi);
   box-sizing: border-box;
   gap: var(--gap-xl);
-  min-width: 189px;
+  min-width: 189px
 }
+
 .weather-icon {
   height: 90px;
   width: 87px;
   position: relative;
   object-fit: cover;
-  transform: scale(0.80);
+  transform: scale(0.80)
 }
+
 .weather-txt {
   line-break: anywhere;
   width: 100%;
-  margin: 0;
+  margin: 0
 }
+
 .date1 {
   height: 74px;
   width: 59px;
@@ -265,8 +290,9 @@
   font-weight: 500;
   display: flex;
   align-items: center;
-  flex-shrink: 0;
+  flex-shrink: 0
 }
+
 .weather {
   border-radius: var(--br-3xs);
   background-color: var(--color-aliceblue);
@@ -278,20 +304,22 @@
   gap: var(--gap-3xs);
   font-size: var(--font-size-lg);
   color: var(--color-dimgray);
-  font-family: var(--font-roboto);
+  font-family: var(--font-roboto)
 }
+
 .ai-child {
   width: 100%;
   height: 100%;
   object-fit: contain;
-  left: 0;
-  
+  left: 0
 }
+
 .ai,
 .middle-content {
   display: flex;
-  flex-direction: row;
+  flex-direction: row
 }
+
 .ai {
   height: 127px;
   width: 126px;
@@ -300,27 +328,21 @@
   align-items: center;
   justify-content: center;
   box-sizing: border-box;
-  position: relative;
+  position: relative
 }
+
 .middle-content {
   align-self: stretch;
   align-items: flex-start;
   justify-content: flex-start;
-  gap: var(--gap-9xl);
+  gap: var(--gap-9xl)
 }
-.article-title {
-  margin: 0;
-  position: relative;
-  font-size: inherit;
-  line-height: 23px;
-  font-weight: 500;
-  font-family: inherit;
-}
+
 .article-content {
   position: relative;
   font-size: var(--font-size-mini);
   line-height: 15px;
-  font-weight: 500;
+  font-weight: 500
 }
 
 .article-1 {
@@ -330,39 +352,7 @@
   background-position: top;
   border-radius: var(--br-3xs);
   overflow: hidden;
- 
-}
-
-.article-1 {
   background-image: url(../../res/article-1@3x.png);
-}
-
-/* Dark overlay effect */
-.article-1 .overlay{
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
-  /* Adjust opacity for darkness */
-  z-index: 1;
-}
-
-/* Content styling to appear above the overlay */
-.article-1 .content {
-  
-  display: flex;
-  flex: 1;
-  flex-direction: column;
-  z-index: 2;
-  color: white;
-  box-sizing: border-box;
-  gap: var(--gap-3xs);
-  
-}
-
-.article-1 {
   flex: 1;
   border-radius: var(--br-3xs);
   display: flex;
@@ -371,43 +361,48 @@
   justify-content: center;
   padding: var(--padding-base-5) var(--padding-lgi);
   min-width: 189px;
-  cursor: pointer;
-} 
-.vertical-separator {
-  height: 111px;
-  width: 1px;
-  position: relative;
-  border-right: 1px solid var(--color-tan);
-  box-sizing: border-box;
+  cursor: pointer
 }
-.the-mountaineers-and {
-  margin: 0;
-  position: relative;
-  font-size: inherit;
-  line-height: 23px;
-  font-weight: 500;
-  font-family: inherit;
+
+.article-1 .overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #00000080;
+  z-index: 1
+}
+
+.article-1 .content {
+  display: flex;
+  flex: 1;
+  flex-direction: column;
+  z-index: 2;
+  color: #fff;
+  box-sizing: border-box;
+  gap: var(--gap-3xs)
 }
 
 .row1 {
   display: flex;
   align-items: center;
-}
-.row1 {
   align-self: stretch;
   flex-direction: row;
   justify-content: flex-start;
   padding: 0 1px;
-  gap: var(--gap-smi);
+  gap: var(--gap-smi)
 }
+
 .horizontal-separator,
 .horizontal-separator1 {
   height: 1px;
   width: 218px;
   position: relative;
   border-top: 1px solid var(--color-tan);
-  box-sizing: border-box;
+  box-sizing: border-box
 }
+
 .separators {
   width: 534px;
   height: 0;
@@ -418,30 +413,25 @@
   padding: 0;
   box-sizing: border-box;
   gap: var(--gap-xl);
-  max-width: 100%;
+  max-width: 100%
 }
 
-.vertical-separator1 {
-  height: 111px;
-  width: 1px;
-  position: relative;
-  border-right: 1px solid var(--color-tan);
-  box-sizing: border-box;
-}
 .row2 {
   display: flex;
   align-items: center;
   align-self: stretch;
   flex-direction: row;
   justify-content: flex-start;
-  gap: var(--gap-smi);
+  gap: var(--gap-smi)
 }
+
 .news,
 .outer-content {
   display: flex;
   flex-direction: column;
-  max-width: 100%;
+  max-width: 100%
 }
+
 .news {
   align-self: stretch;
   border-radius: var(--br-3xs);
@@ -453,39 +443,45 @@
   gap: var(--gap-smi);
   text-align: left;
   font-size: var(--font-size-4xl);
-  font-family: var(--font-roboto);
+  font-family: var(--font-roboto)
 }
+
 .outer-content {
   flex: 1;
   align-items: flex-start;
   justify-content: flex-start;
-  gap: var(--gap-9xl);
+  gap: var(--gap-9xl)
 }
+
 .photos-icon {
   height: 551.1px;
   width: 310px;
   position: relative;
   border-radius: var(--br-3xs);
-  object-fit: cover;
+  object-fit: cover
 }
+
 .content,
 .main-frame,
 .mainview {
   max-width: 100%;
   display: flex;
-  justify-content: flex-start;
+  justify-content: flex-start
 }
+
 .content {
   align-self: stretch;
   flex-direction: row;
   align-items: flex-end;
-  gap: 29px;
+  gap: 29px
 }
+
 .main-frame,
 .mainview {
   align-items: flex-start;
-  box-sizing: border-box;
+  box-sizing: border-box
 }
+
 .mainview {
   flex: 1;
   background-color: var(--color-white);
@@ -495,85 +491,118 @@
   text-align: center;
   font-size: var(--font-size-base);
   color: var(--color-white);
-  font-family: var(--font-inter);
+  font-family: var(--font-inter)
 }
+
 .main-frame {
   width: 1120px;
   flex-direction: row;
   padding: 10px var(--padding-xl) 38.9px;
   line-height: normal;
-  letter-spacing: normal;
+  letter-spacing: normal
 }
+
+.time-separators,
+.time-separators1 {
+  position: relative;
+  line-height: 100%;
+  z-index: 1
+}
+
+.article-title,
+.the-mountaineers-and {
+  margin: 0;
+  position: relative;
+  font-size: inherit;
+  line-height: 23px;
+  font-weight: 500;
+  font-family: inherit
+}
+
+.vertical-separator,
+.vertical-separator1 {
+  height: 111px;
+  width: 1px;
+  position: relative;
+  border-right: 1px solid var(--color-tan);
+  box-sizing: border-box
+}
+
 @media screen and (max-width: 925px) {
   .photos-icon {
-    flex: 1;
+    flex: 1
   }
+
   .content {
-    flex-wrap: wrap;
+    flex-wrap: wrap
   }
 }
+
 @media screen and (max-width: 700px) {
-  .middle-content {
-    flex-wrap: wrap;
-  }
-  .vertical-separator {
-    width: 100%;
-    height: 1px;
-  }
-  .row1 {
-    flex-wrap: wrap;
-  }
-  .vertical-separator1 {
-    width: 100%;
-    height: 1px;
-  }
-  .row2 {
-    flex-wrap: wrap;
-  }
   .outer-content {
-    min-width: 100%;
+    min-width: 100%
   }
+
   .mainview {
     padding-top: var(--padding-xl);
     padding-bottom: var(--padding-xl);
-    box-sizing: border-box;
+    box-sizing: border-box
+  }
+
+  .middle-content,
+  .row1,
+  .row2 {
+    flex-wrap: wrap
+  }
+
+  .vertical-separator,
+  .vertical-separator1 {
+    width: 100%;
+    height: 1px
   }
 }
+
 @media screen and (max-width: 450px) {
   .date-and-time {
-    flex-wrap: wrap;
+    flex-wrap: wrap
   }
-  .article-title{
+
+  .article-title {
     font-size: var(--font-size-lg);
-    line-height: 18px;
+    line-height: 18px
   }
+
   .news {
     padding-top: var(--padding-xl);
     padding-bottom: var(--padding-xl);
-    box-sizing: border-box;
+    box-sizing: border-box
   }
 }
+
 .order {
   width: 136px;
   position: relative;
   font-weight: 500;
-  display: inline-block;
+  display: inline-block
 }
+
 .transcript-txt {
-  margin: 0;
+  margin: 0
 }
+
 .transcript {
   width: 747px;
   position: relative;
   font-weight: 500;
   display: inline-block;
-  max-width: 100%;
+  max-width: 100%
 }
+
 .request {
   position: absolute;
   top: 88px;
   left: 0;
-  box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+  box-shadow: 0 4px 4px #00000040;
   border-radius: var(--br-3xs);
   background-color: var(--color-aliceblue);
   width: 862px;
@@ -589,21 +618,24 @@
   text-align: left;
   font-size: var(--font-size-xl);
   color: var(--color-dimgray);
-  font-family: var(--font-roboto);
+  font-family: var(--font-roboto)
 }
+
 .ai-icon,
 .wrapper-ai {
   position: absolute;
   top: 0;
-  z-index: 1;
+  z-index: 1
 }
+
 .ai-icon {
   width: 100%;
   height: 100%;
   object-fit: contain;
   left: 0;
-  transform: scale(1.159);
+  transform: scale(1.159)
 }
+
 .wrapper-ai {
   left: 469px;
   border-radius: var(--br-3xs);
@@ -611,8 +643,9 @@
   height: 127px;
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: center
 }
+
 .vocalchat {
   width: 862px;
   height: 503px;
@@ -621,30 +654,29 @@
   letter-spacing: normal;
   max-width: 90%;
   max-height: 90%;
-  overflow: auto;
+  overflow: auto
 }
+
 @media screen and (max-width: 700px) {
+
   .order,
   .transcript {
-    font-size: var(--font-size-base);
+    font-size: var(--font-size-base)
   }
 }
+
 .weather-icon1 {
   height: 90px;
   width: 87px;
   position: relative;
-  object-fit: cover;
+  object-fit: cover
 }
-.blank-line1,
-.blank-line2,
-.c1,
-.cloudy {
-  margin: 0;
-}
+
 .date-txt2 {
   line-break: anywhere;
-  width: 100%;
+  width: 100%
 }
+
 .date2 {
   height: 74px;
   width: 59px;
@@ -653,44 +685,47 @@
   font-weight: 500;
   display: flex;
   align-items: center;
-  flex-shrink: 0;
+  flex-shrink: 0
 }
+
 .weather-wrapper,
 .weather1 {
   display: flex;
   flex-direction: row;
   align-items: flex-start;
-  justify-content: flex-start;
+  justify-content: flex-start
 }
+
 .weather1 {
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.25);
+  box-shadow: 0 0 10px #00000040;
   border-radius: var(--br-3xs);
   background-color: var(--color-aliceblue);
   padding: var(--padding-2xl) var(--padding-lgi) var(--padding-base);
   gap: var(--gap-3xs);
-  z-index: 1;
+  z-index: 1
 }
+
 .weather-wrapper {
   padding: 0 237px;
   box-sizing: border-box;
-  max-width: 100%;
+  max-width: 100%
 }
+
 .order1 {
   width: 136px;
   position: relative;
   font-weight: 500;
-  display: inline-block;
+  display: inline-block
 }
-.todo-show-weather {
-  margin: 0;
-}
+
 .transcript1 {
   width: 748px;
   position: relative;
   font-weight: 500;
   display: inline-block;
-  max-width: 100%;
+  max-width: 100%
 }
+
 .request1,
 .weatherdetails {
   display: flex;
@@ -699,11 +734,12 @@
   justify-content: flex-start;
   box-sizing: border-box;
   color: var(--color-dimgray);
-  font-family: var(--font-roboto);
+  font-family: var(--font-roboto)
 }
+
 .request1 {
   align-self: stretch;
-  box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+  box-shadow: 0 4px 4px #00000040;
   border-radius: var(--br-3xs);
   background-color: var(--color-aliceblue);
   overflow: hidden;
@@ -712,8 +748,9 @@
   max-width: 100%;
   margin-top: -41px;
   text-align: left;
-  font-size: var(--font-size-xl);
+  font-size: var(--font-size-xl)
 }
+
 .weatherdetails {
   width: 862px;
   position: relative;
@@ -724,28 +761,40 @@
   max-height: 90%;
   overflow: auto;
   text-align: center;
-  font-size: var(--font-size-lg);
+  font-size: var(--font-size-lg)
 }
+
+.blank-line1,
+.blank-line2,
+.c1,
+.cloudy,
+.todo-show-weather {
+  margin: 0
+}
+
 @media screen and (max-width: 700px) {
   .weather-wrapper {
     padding-left: var(--padding-xl);
     padding-right: var(--padding-xl);
-    box-sizing: border-box;
+    box-sizing: border-box
   }
+
   .order1,
   .transcript1 {
-    font-size: var(--font-size-base);
+    font-size: var(--font-size-base)
   }
+
   .request1 {
     padding-bottom: 209px;
-    box-sizing: border-box;
+    box-sizing: border-box
   }
 }
+
 @media screen and (max-width: 450px) {
   .weather-wrapper {
     padding-left: var(--padding-99xl);
     padding-right: var(--padding-99xl);
-    box-sizing: border-box;
+    box-sizing: border-box
   }
 }
 
@@ -763,58 +812,52 @@
   background-color: #1a1a1a;
   background-size: cover;
   background-position: center;
-  height:125px;
-  transition: background-image 0.5s ease-in-out;
-
-  /* Correspond à la hauteur du séparateur vertical */
+  height: 125px;
+  transition: background-image .5s ease-in-out
 }
 
-.article-1 .overlay{
+.article-1 .overlay {
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background: linear-gradient(to bottom,
-      rgba(0, 0, 0, 0.2) 0%,
-      rgba(0, 0, 0, 0.8) 100%);
-  border-radius: var(--br-3xs);
+  background: linear-gradient(to bottom, #0003 0%, #000c 100%);
+  border-radius: var(--br-3xs)
 }
 
-.article-1 .content{
+.article-1 .content {
   width: 100%;
   z-index: 2;
   display: flex;
   flex-direction: column;
   gap: var(--gap-3xs);
-  transition: all 0.5s ease-in-out;
+  transition: all .5s ease-in-out;
   transform: translateY(0);
-  opacity:1;
+  opacity: 1
 }
 
 .photos-icon-container {
   width: 100%;
   overflow: hidden;
-  position: relative;
+  position: relative
 }
 
 .photos-slider {
   display: flex;
-  transition: transform 0.5s ease-in-out;
+  transition: transform .5s ease-in-out
 }
 
 .photos-slider .photos-icon {
   min-width: 100%;
-  object-fit: cover;
+  object-fit: cover
 }
 
-/* Animation pour la sortie vers le haut */
 .content.slide-out {
   transform: translateY(-100%);
-  opacity: 0;
+  opacity: 0
 }
 
-/* Animation pour l'entrée par le bas */
 .content.slide-in {
   transform: translateY(100%);
   opacity: 0;
@@ -822,13 +865,12 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
+  height: 100%
 }
 
-/* État normal */
 .content.active {
   transform: translateY(0);
-  opacity: 1;
+  opacity: 1
 }
 
 .popup-overlay {
@@ -837,42 +879,41 @@
   left: 0;
   right: 0;
   bottom: 0;
-  background: rgba(0, 0, 0, 0.5);
+  background: #00000080;
   display: flex;
   align-items: center;
   justify-content: center;
   opacity: 0;
   visibility: hidden;
-  transition: opacity 0.3s;
+  transition: opacity .3s
 }
 
 .popup-overlay.show {
   opacity: 1;
-  visibility: visible;
+  visibility: visible
 }
 
 .vocalchat {
   transform-origin: calc(100% - 63px) 63px;
-  /* Position de l'icône AI */
   transform: scale(0);
-  transition: transform 0.5s cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform .5s cubic-bezier(0.4, 0, 0.2, 1)
 }
 
 .popup-overlay.show .vocalchat {
-  transform: scale(1);
+  transform: scale(1)
 }
 
 .newsdetails {
   width: 80%;
   height: 80%;
-  background-color: white;
+  background-color: #fff;
   border-radius: var(--br-3xs);
   overflow: hidden;
-  position: relative;
+  position: relative
 }
 
 .newsdetails iframe {
   width: 100%;
   height: 100%;
-  border: none;
+  border: none
 }
