--- a/public/src/css/index.css
+++ b/public/src/css/index.css
@@ -466,7 +466,8 @@
 .mainview {
   max-width: 100%;
   display: flex;
-  justify-content: flex-start
+  justify-content: flex-start;
+  overflow: hidden;
 }
 
 .content {
