--- a/public/src/css/global.css
+++ b/public/src/css/global.css
@@ -19,34 +19,38 @@ body {
   --font-size-mini: 15px;
   --font-size-4xl: 23px;
   --font-size-lg: 18px;
-  --font-size-base: 16px;
   --font-size-xl: 20px;
+  --font-size-base: 16px;
 
   /* Colors */
-  --color-white: #fff;
   --color-aliceblue: #e9effa;
-  --color-tan: #c2a383;
+  --color-white: #fff;
+  --color-dimgray-100: #4a546e;
   --color-dimgray: #4a546e;
+  --color-tan: #c2a383;
 
   /* Gaps */
   --gap-9xl: 28px;
-  --gap-smi: 13px;
   --gap-3xs: 10px;
-  --gap-xl: 20px;
+  --gap-smi: 13px;
   --gap-3xl: 22px;
+  --gap-xl: 20px;
 
   /* Paddings */
+  --padding-12xs: 1px;
+  --padding-18xl: 37px;
+  --padding-14xl: 32px;
   --padding-xl: 20px;
-  --padding-9xl: 28px;
-  --padding-base-5: 16.5px;
-  --padding-lgi: 19px;
-  --padding-2xl: 21px;
-  --padding-base: 16px;
-  --padding-11xs: 2px;
-  --padding-8xs: 5px;
   --padding-4xl: 23px;
   --padding-6xl: 25px;
+  --padding-11xs: 2px;
   --padding-99xl: 118px;
+  --padding-2xl: 21px;
+  --padding-lgi: 19px;
+  --padding-base: 16px;
+  --padding-9xl: 28px;
+  --padding-base-5: 16.5px;
+  --padding-8xs: 5px;
 
   /* Border radiuses */
   --br-3xs: 10px;
